Moved genderyzator to separate module
Moved genderyzator to separate module and changed it to object.

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Grenze:wght@400;500&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="./css/styles.css?v=2">
-        <script src="./js/main.js?v=2"></script>
+        <link rel="stylesheet" href="./css/styles.css">
+        <script src="./js/main.js" type="module"></script>
     </head>
     <body>
 
